--- a/public/StylesGlobals.css
+++ b/public/StylesGlobals.css
@@ -10,8 +10,9 @@ body{
 }
 .image{
   width: 350px;
-  height: 200px;
-  background-color: green;
+  height: 350px;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 
 .logo{
